--- a/ServiceComplex/Pages/BaseData/Job.cshtml
+++ b/ServiceComplex/Pages/BaseData/Job.cshtml
@@ -102,6 +102,7 @@
                     </div>
 
                 </div>
+                </div>
                 <div class="modal-footer">
                         <input type="submit" class="btn" data-dismiss="modal" onclick="saveNew()" value="ذخیره " />
                     <button class="btn" data-dismiss="modal"><i class="flaticon-cancel-12"></i> بستن</button>
@@ -146,7 +147,7 @@
 
                 </div>
                 <div class="modal-footer">
-                    <input type="submit" class="btn" data-dismiss="modal" onclick="saveEdit()">ذخیره تغییرات</input>
+                    <input type="submit" class="btn" data-dismiss="modal" onclick="saveEdit()" value="ذخیره تغییرات"/>
                     <button class="btn" data-dismiss="modal"><i class="flaticon-cancel-12"></i> بستن</button>
                 </div>
             </form>
